--- a/style.css
+++ b/style.css
@@ -36,6 +36,23 @@ h1, h2 {
   width: 85px
 }
 
+.button {
+  background-color: #f4511e;
+  border: none;
+  color: white;
+  padding: 4px 8px;
+  text-align: center;
+  font-size: 12px;
+  margin: 2px 1px;
+  opacity: 0.7;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.button:hover {opacity: 1}
+
 #dealer-hand-value {
   font-size: 20px
 }
@@ -75,5 +92,5 @@ h1, h2 {
 }
 
 .betInput {
-  width: 5em
+  width: 4em
 }
