--- a/style.css
+++ b/style.css
@@ -37,14 +37,13 @@ h1, h2 {
 }
 
 .button {
-  background-color: #f4511e;
+  background-color: #92aa29e5;
   border: none;
-  color: white;
   padding: 4px 8px;
   text-align: center;
   font-size: 12px;
   margin: 2px 1px;
-  opacity: 0.7;
+  opacity: 0.8;
   transition: 0.3s;
   display: inline-block;
   text-decoration: none;
@@ -82,6 +81,10 @@ h1, h2 {
   width: 50px
 }
 
+.chipsText {
+  font-size: 18px
+}
+
 .cursor {
   cursor: pointer
 }
@@ -93,6 +96,17 @@ h1, h2 {
 
 #choose-game-div {
   text-align: center
+}
+
+#hint-button {
+  background-color: rgb(2, 134, 2);
+  border: none;
+  padding: 4px 8px;
+  text-align: center;
+  font-size: 12px;
+  margin: 2px 1px;
+  opacity: 0.8;
+  cursor: pointer
 }
 
 .betInput {
