--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@ body {
 }
 
 li {
-  list-style-type: none
+  list-style-type: none;
+  font-size: 20px;
+  margin: 5px
 }
 
 h1, h2 {
@@ -77,8 +79,8 @@ h1, h2 {
 }
 
 .playerImage {
-  height: 50px;
-  width: 50px
+  height: 60px;
+  width: 60px
 }
 
 .chipsText {
