--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ h1, h2 {
 .bet-button {
   background-color: #e0e2d9e5;
   border: none;
+  border-radius: 4px;
   padding: 2px 25px;
   text-align: center;
   font-size: 12px;
